added new feature

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
   <body>
     <h1>How to handle Git</h1>
     <p>Das ist ein neuer Paragraph</p>
+    <button type="">Newsletter</button>
   </body>
 </html>
